--- a/app/views/survey_questions/edit.html.erb
+++ b/app/views/survey_questions/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing survey_question</h1>
-
+<h1>Editing Survey Question</h1>
+<br/>
 <%= render 'form' %>
 
-<%= link_to 'Show', @survey_question %> |
-<%= link_to 'Back', survey_questions_path %>
+<%= link_to 'Back', survey_questions_path(@initial_setup) %>
