--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -1,4 +1,6 @@
 <%= render 'shared/header', :study => @study %>
 
 
-<%= render 'form_edit' %>
+<%= render partial: 'form', locals: {survey: @survey,
+                                     form_options: {html: {class: 'form-horizontal'}},
+                                     submit_text: 'Update Survey'} %>
