--- a/app/views/surveys/new.html.erb
+++ b/app/views/surveys/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Create Survey</h1>
 
 <%= render partial: 'form',
-           locals: {survey: @surveyForm,
+           locals: {survey: @survey_form,
                     form_options: {url: surveys_path(@initial_setup), method: :post, as: :survey, html: {class: 'form-horizontal'}},
                     submit_text: 'Create Survey'} %>
 
