--- a/app/views/survey_questions/edit.html.erb
+++ b/app/views/survey_questions/edit.html.erb
@@ -2,4 +2,4 @@
 <br/>
 <%= render 'form' %>
 
-<%= link_to 'Back', survey_questions_path(@initial_setup) %>
+<%= link_to 'Back', survey_questions_path %>
