fixes capitalization for #193

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -138,7 +138,7 @@
         </a>
         <ul class="dropdown-menu">
           <li>
-            <%= link_to 'Survey info', new_or_edit_survey_path(@study) %>
+            <%= link_to 'Survey Info', new_or_edit_survey_path(@study) %>
           </li>
           <% if @study.survey_id.present? %>
           <li>
