--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,6 +1,6 @@
-<h1>Survey</h1>
-<%= @survey.description %>
-<br/>
+<h1><%= @survey.name %></h1>
+<p><%= @survey.description %></p>
+
 
 <%= simple_form_for @survey_form, url: survey_responses_path,
                     method: :post, as: :survey, html: {class: 'form-horizontal'} do |f| %>
