--- a/app/views/studies/_vote.html.erb
+++ b/app/views/studies/_vote.html.erb
@@ -35,3 +35,11 @@ image2 = image_tag(pair[1].image_url, :size => "570x370")
     <%= link_to 'Can\'t decide, let\'s skip this one.', url_for() %>
   </div>
 </div>
+<% if @study.public? %>
+<div class="row" style="margin-top:30px;">
+  <div class="span12 skip-vote-row text-right">
+
+    Responses are &nbsp;&nbsp;<span style="" class="label label-info"><i class="icon-globe icon-white"></i> PUBLIC</span>
+  </div>
+</div>
+<%end%>
