--- a/app/views/surveys/_form.html.erb
+++ b/app/views/surveys/_form.html.erb
@@ -10,7 +10,7 @@
               label: 'Instructions / Description', 
               as: :text,
               input_html: {rows: 4, style: 'width:400px; height:200px'},
-              hint: 'Pprovide instructions to respondents or describe how the data will be used.' %>
+              hint: 'Provide instructions to respondents or describe how the data will be used.' %>
 
   <% if @study_id.present? %>
     <%= f.hidden_field :study_id,
@@ -26,3 +26,12 @@
   </div>
 
 <% end %>
+
+<% if !@study.public? %>
+<p style="font-size:.75em">
+Your study is &nbsp;&nbsp;<span style="" class="label label-inverse"><i class="icon-lock icon-white"></i> PRIVATE</span><br />
+All responses include data that could lead to identification of a respondent (ip address, location).<br />
+Public studies provide a notice to respondents indicating results are public. 
+Private studies include no such notice. <br />
+If you plan to make your data public in the future, inform survey takers in the instructions.</p>
+<%end%>
