improvements to about page for #184. Page should probably still be refactored

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -24,6 +24,7 @@ we have created an easy to use tool that lets anyone construct their own survey 
 begin to understand what people think about places in cities across the world.</p>
 
 <h3>About the Team</h3>
+<h4>Leadership</h4>
 <p><strong>Dr. Jennifer Evans-Cowley</strong> is the Associate Dean for Academic Affairs and 
 Administration in the College of Engineering and Professor of City and Regional Planning 
 in the Knowlton School of Architecture at The Ohio State University. She has passionate 
@@ -33,12 +34,14 @@ thinkers in urban planning and technology. She has won numerous awards for her
 teaching, advising, and research. Cowley publishes and speaks widely on technology 
 and the future of the city. You can follow Dr. Evans-Cowley on Twitter 
 <a href="http://www.twitter.com/evanscowley">@EvansCowley</a>.</p> 
-<p><strong>Jason Little</strong> is the  Systems Engineer,  Engineering Computing Services 
-in the College of Engineering at the The Ohio State University.  He serves as the 
-technical lead for centralized web development within the College and is also pursuing his MBA 
-at the Fisher College of Business.</p>
-<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with The Ohio State University
-College of Engineering. His duties include software development, web design, systems 
+
+<h4>Developers &amp; Designers</h4>
+
+<p><strong>Jason Little</strong> is a manager, developer, and systems administrator in Engineernig Web Services.</p>
+
+<p><strong>Brian Kildow</strong> is a developer and systems administrator in Engineering Web Services.</p>
+
+<p><strong>Corey Hinshaw</strong> is a systems Developer/Engineer with University Relations. His duties include software development, web design, systems 
 admiinistration, and consuming the office's excess caffeine. You can drop him a line at 
 <a href="http://www.twitter.com/electrickite">@electrickite</a>.</p>
 <p><strong>Meghan Frazer</strong> is the Digital Resources Curator for the 
