--- a/app/views/studies/_list.html.erb
+++ b/app/views/studies/_list.html.erb
@@ -11,6 +11,7 @@
       <% if !current_user.nil? && current_user.admin %>
       <th class="studyfull"><%= sortable_column "Promoted", :column => "promoted" %></th>
       <% end %>
+      <th class="studyfull"><%= sortable_column 'Date Created', :column => 'created_at' %></th>
       <th class="studyfull"><%= sortable_column "Public", :column => "public" %></th>
       <th><%= sortable_column "Status", :column => "active" %></th>
   </tr>
@@ -26,6 +27,7 @@
       <% if !current_user.nil? && current_user.admin %>
       <td class="studyfull"><% if study.promoted %> Yes <% else%> No <% end%></td>
       <% end %>
+      <td class="studyfull"><%=	study.created_at.strftime("%m/%d/%Y") %></td>
       <td class="studyfull"><% if study.public %> Yes <% else%> No <% end%></td>
       <td>
         <% if study.active.nil? %>
