--- a/app/views/studies/_list.html.erb
+++ b/app/views/studies/_list.html.erb
@@ -1,18 +1,18 @@
 <% unless @studies.empty? %>
   <table class="table table-striped table-hover">
     <tr>
-      <th><%= sortable_column "Name", :column => "name" %></th>
+      <th><%= sortable_column "Study Name", :column => "name" %></th>
       <th>Question</th>
       <% if @mine.nil? %>
       <th class="studyfull">User</th>
       <% end %>
-      <th class="studyfull"># Areas</th>
       <th><%= sortable_column "# Votes", :column => "comparisons_count" %></th>
       <% if !current_user.nil? && current_user.admin %>
       <th class="studyfull"><%= sortable_column "Promoted", :column => "promoted" %></th>
       <% end %>
       <th class="studyfull"><%= sortable_column 'Date Created', :column => 'created_at' %></th>
-      <th class="studyfull"><%= sortable_column "Public", :column => "public" %></th>
+      <th class="studyfull"><%= sortable_column 'Analyze', :column => 'public' %></th>
+      <th class="studyfull"><%= sortable_column 'Survey', :column => 'has_survey' %></th>
       <th><%= sortable_column "Status", :column => "active" %></th>
   </tr>
   <% @studies.each do |study| %>
@@ -22,13 +22,19 @@
       <% if @mine.nil? %>
         <td class="studyfull"><%= study.user.username %></td>
       <% end %>
-      <td class="studyfull"><%= study.region_set.regions.count %></td>
       <td><%= study.comparisons_count %></td>
       <% if !current_user.nil? && current_user.admin %>
       <td class="studyfull"><% if study.promoted %> Yes <% else%> No <% end%></td>
       <% end %>
       <td class="studyfull"><%=	study.created_at.strftime("%m/%d/%Y") %></td>
-      <td class="studyfull"><% if study.public %> Yes <% else%> No <% end%></td>
+      <td class="studyfull">
+        <% if study.public %>
+          <%=	link_to 'Public', results_study_path(study) %>
+        <% else%>
+          Private
+        <% end%>
+      </td>
+      <td class="studyfull"><%=	study.has_survey? ? 'Yes' : 'No' %></td>
       <td>
         <% if study.active.nil? %>
           <span class="label label-warning">Not Launched</span>
