--- a/app/assets/stylesheets/surveys.css.scss
+++ b/app/assets/stylesheets/surveys.css.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the surveys controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#sortable {
+  tr.item {
+    cursor: row-resize;
+  }
+}
+
