--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -1,24 +1,25 @@
 <h1>Available Studies</h1>
 <p>Choose a study to start voting or view shared analytics.</p>
 <div class="search pull-right">
-<%= form_tag studies_path, :method => 'get' do %>
-  <%= text_field_tag :q, params[:q], :placeholder => 'Search for a study', :autocomplete => 'off'%>
-  <button type="submit" class="btn btn-primary search-button" >
-    <i class="icon-search icon-white"></i> Search
-  </button>
-<% end %>
+  <%= form_tag studies_path, :method => 'get' do %>
+    <%= text_field_tag :q, params[:q], :placeholder => 'Search for a study', :autocomplete => 'off' %>
+    <button type="submit" class="btn btn-primary search-button">
+      <i class="icon-search icon-white"></i> Search
+    </button>
+  <% end %>
 </div>
+<div class="clearfix">&nbsp;</div>
 <% if @studies.empty? and params[:q].nil? %>
   <p class="empty-text">There are no active studies.
-  <% if !user_signed_in? %>
-    To create a study, please <%= link_to 'log in', new_user_session_path %>.
-  <% end %>
+    <% if !user_signed_in? %>
+      To create a study, please <%= link_to 'log in', new_user_session_path %>.
+    <% end %>
   </p>
 <% elsif @studies.empty? %>
   <p><span class="no-studies">No studies match your current search.</span></p>
 <% else %>
   <div id="search-results">
-  <%= render 'studies/list', :studies => @studies, :show_user => true  %>
+    <%= render 'studies/list', :studies => @studies, :show_user => true %>
   </div>
-  <br />
+  <br/>
 <% end %>
