fixes #213 and #214 by improving launch validation on surveys

--- a/app/views/studies/_status.html.erb
+++ b/app/views/studies/_status.html.erb
@@ -17,6 +17,7 @@
           <li>Change the question</li>
           <li>Add new areas</li>
           <li>Add, remove, or modify images</li>
+          <li>Change survey questions</li>
         </ul>
       </p>
     </div>
