--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -18,11 +18,10 @@
     <h1>Help</h1>
 
     <h3 id="video">Video Introduction</h3>
-    <p>This YouTube video walks through the process of creating a study and some of the things you can do with the results.</p>
-    <iframe class="help-video" src="http://www.youtube.com/embed/NH63AjR83rg" frameborder="0" allowfullscreen></iframe>   
+    <p>We are in the process of updating our screencasts. In the meantime, this <a href="http://www.youtube.com/watch?v=NH63AjR83rg">video provides a nice overview</a> though not everything is in exactly the same location.</p> 
 
     <h3 id="accounts">Create a User Account</h3>
-    <p>Go to the <a href="<%= new_user_registration_path %>">Sign Up</a> page.  User accounts can be created 
+    <p>Go to the <a href="/users/sign_up">Sign Up</a> page.  User accounts can be created 
     using existing accounts on Coursera, Facebook or Twitter.   
 
     <h4>Twitter</h4><p>You will be directed to your Twitter account to authorize StreetSeen.  You will then be redirected back 
@@ -39,98 +38,171 @@
     to StreetSeen, where you will be prompted to enter a valid name, username and email address.  StreetSeen usernames 
     will be displayed throughout the site associated with user-generated content.  Click on Sign Up to finish the process  </p>   
 
-    <h4>StreetSeen Only</h4><p>If you do not have an account with any of these providers, you can create a new account by filling in a 
+    <h4>StreetSeen Only</h4>
+    <p>If you do not have an account with any of the previously mentioned providers, you can create a new account by filling in a 
     username, email address and password.  StreetSeen usernames will be displayed throughout the site associated with 
     user-generated content. Then, click on Sign Up.</p>   
 
     <h3 id="createstudy">Create a Study</h3>
-    <p>To create a study, you need to have an account and be logged in.  If you're not, <%= link_to "go set one up or log in", new_user_session_path %> and then come back.  We'll wait.</p>
-    <p>Ok, to create our study we need to first create the question we want to ask, and then select a group of images to compare with each other.  
+    <p>To create a study, you need to have an account and be logged in.  If you're not, <a href="/users/sign_in">go to set one up or log in</a> and then come back.  We'll wait.</p>
+    <p>Ok, to create a new study we need to first create the question we want to ask, and then select a group of images to compare with each other.  
     <ol>
-    <li>Click on <%= link_to t('.public_studies'), studies_path %> or My Research</li>
-    <li>At the bottom of the list of studies, click the Create a New Study button.</li>
+    <li>Click on My Studies</li>
+    <li>Click the Create a New Study button.<br>
+      <br>
+      <%= image_tag("help/create-study_01.png", alt:'', style:'border: solid black 1px') %>
+      </li>
+    <br />
+    <li>Fill in the Question for Voter.  This is the question you would like study participants to answer while choosing between two photos. This cannot be changed after launching the study.</li>
     <li>Fill in a Name and a Description for your study.</li>
-    <li>Fill in the Question for Voter.  This is the question you would like study participants to answer while choosing between two photos.</li>
+    <li>Select whether or not you would like to have a survey.  This will make the voter take the survey to collect additional information. If you choose Yes to have a survey, it will automatically ask you to limit the vote to a certain number and you will need to enter the number of votes.</li>
+    <li>Select whether or not you would like to Limit votes to a certain number.  If you choose Yes you will need to enter the number.</li>
     <li>Select whether or not you would like to Share your Research.  This cannot be changed once the study is created.</li>
-    <li>Click on Create Study.</li>
+    <li>Click on Create Study.<br>
+      <br>
+      <%= image_tag("help/create_a_study2_02.png", alt:'') %>
+      <br><br>    </li>
     <li>A confirmation message will pop up indicating that your study has been successfully created and the Add Area 
-    form is now visible.  Your study has been created, but isn't much use without images.  So, next, we need 
-    to add some areas.</li>
+      form is now visible.  <br><br>
+      </li>
+   <%= image_tag("help/success.png", alt:'') %>
+   <br><br>
+
+
+   <strong>Creating a Survey</strong>
+   <li>If you have chosen to have a survey, you will go through steps to create a survey.</li>
+   <li>Provide survey instructions to respondents or describe how the data will be used then click on Create Survey button.<br>
+     <br>
+     <%= image_tag("help/survey-1.png", alt:'') %>
+     <br>
+     <br>
+   </li>
+   <li>Then you will build individual survey questions. Click the Add your first question button to add a question.<br>
+     <br>
+     <%= image_tag("help/survey-2.png", alt:'') %>
+     <br><br>
+<br>
+   </li>
+      <li>Fill in a Survey Question and choice of Answers. Only Multiple choice answers are possible at this point in time. Please make sure your questions are multiple choice. <br>
+        <br>
+        <%= image_tag("help/survey-3.png", alt:'') %>
+        <br><br>
+   </li>
+      <li>A confirmation message will pop up indicating that your survey question has been successfully created. <br>
+        <br>
+        <%= image_tag("help/survey-confirmation.png", alt:'survey question has been successfully created') %>
+        <br><br>
+   </li>
+   <li>You can add another question or Edit/Delete questions that you have created.
+   </li>
+   <li>Your study has been created, but isn't much use without images.  So, next, we need to add some areas. Click the Continue to regions button to add areas and images.<br>
+ <br>
+     
+     <%= image_tag("help/survey-5.png", alt:'') %>
+     <br><br>   </li>
+      
     </ol>
 
-    <h3 id="areas">Adding Areas</h3>
+<h3 id="areas">Adding Areas</h3>
     <p>Areas are essential to studies.  An Area defines the geographic boundaries within which the application will pull images for a study.</p>
     <p>Areas can only be added if there is <a href="http://maps.google.com/help/maps/streetview/learn/where-is-street-view.html">Google StreetView coverage for that area</a>.  
-    Users will be directed to add an area immediately after creating a study, but can also access this function through the Curate tab once a study has been created.</p>
-    <ol>
+    Users will be directed to add an area immediately after creating a study, but can also access this function through the Edit Area Info tab once a study has been created.</p>
+<ol>
     <li>Fill in a Name and Description for the Area. You can come back and do this after you've drawn the polygon, but *be sure* to do it 
     before you click Save, or you will lose your Area.</li>
-    <li>Find the geographic location on the map, using the controls on the Google Map to zoom in and out and move around the map (click and drag to move).  
-    Single clicking in the map will begin marking your polygon.  (If you accidentally create 
+    <li>Fill in how many images you would like and how far apart they should be.</li>
+    <li>Find the geographic location on the map, using the controls on the Google Map to zoom in and out and move around the map (click and drag to move).    </li>
+    <li>Once you have located the desired area, we want to draw a polygon.  Single clicking in the map will begin marking your polygon. The study will pull images from inside that space.    (If you accidentally create 
     a point before you are ready, you can click the Back link at the bottom of the page, and then click on Add Area 
     in the top tabs).</li>
-    <li>Once you have located the desired area, we want to draw a polygon.  The study will pull images from inside that space.  Click once in the map to place the first point.</li>
-    <li>You should see a red flag in the map.  Click at least two more times to make points for the corners of your polygon.  Lines will be drawn between the points and the inside of the polygon will be shaded. 
-    Keep clicking until the area you want is completely shaded.</li>  
-    <li>Fill in how many images you would like and how far apart they should be.</li>
+    <li>You should see a red marker in the map.  Click at least two more times to make points for the corners of your polygon.  Lines will be drawn between the points and the inside of the polygon will be shaded. 
+    Keep clicking until the area you want is completely shaded.</li>
     <li>If you would like to add more than one area, click on Save and Add Another, and repeat the above steps.</li>
     <li>When you have added your last area, click on Save and Return to Study, where you can curate the sets of images.</li>
-    </ol>
+    <br />
+    <%= image_tag("help/add-area1_02.png", alt:'') %>
+    <br /><br />
+    <li>A confirmation message will pop up indicating that your area has been successfully created.</li>
+     <br />
+     
+     <%= image_tag("help/area-success.png", alt:'') %>
+     <br /><br />
+            </ol>
 
-    <h3 id="images">Editing Images</h3>
-    <p>When you add an Area to a study, it is added to the Curate tab of your study.  Clicking on Curate will give you a dropdown menu 
+<h3 id="images">Editing Images</h3>
+    <p>When you add an Area to a study, it is added to the Edit Area Info tab of your study.  Clicking on Edit Area Info will give you a dropdown menu 
     of your existing areas, plus a link to Create a New One.</p>
     <ol>
-    <li>To edit the images within a study, click on the Study from the My Research page.</li>
-    <li>Click the Curate tab, and select the Area you'd like to modify. (Study authors are directed immediately 
-    here after adding all the areas to a Study.)</li>
-    <li>Click on the image you would like to edit or delete.</li>
+    <li>To edit the images within a study, click on the Study from the My Studies page.<br><br>
+      <%= image_tag("help/edit-1.png", alt:'') %><br><br>   </li>
+    <li>Click the Edit Area Info tab, and select the Area you'd like to modify. (Study authors are directed immediately 
+    here after adding all the areas to a Study.)<br><br>
+    <%= image_tag("help/edit-2.png", alt:'') %><br><br>   </li>
+    <li>Click on the image you would like to edit or delete.<br><br>
+      <%= image_tag("help/edit-3.png", alt:'') %><br><br>    </li>
     <li>Click and drag in the image to rotate it to the desired view, then click on Save Changes.</li>
-    <li>Or, delete the image by clicking on Delete Image and confirming the delete in the pop-up.</li>
+    <li>Or, delete the image by clicking on Delete Image and confirming the delete in the pop-up.<br><br>
+      <%= image_tag("help/edit-4.png", alt:'') %><br><br>   </li>
     </ol>
 
     <h3 id="launch">Launching a Study</h3>
-    <p>To view your studies that are not yet launched, first log in, then click on My Research.  The unlaunched 
+    <p>To view your studies that are not yet launched, first log in, then click on My Studies.  The unlaunched 
     studies will be marked with a yellow label.</p>
     <ol>
-    <li>Click on the Study Name.</li>
+    <li>Click on the Study Name.<br>
+      <br>
+      <%= image_tag("help/edit-1.png", alt:'') %>
+      <br>
+      <br>
+    </li>
     <li>Make sure everything is set for the study.</li>
-    <li>Click the green launch button in the top right corner of the screen.</li>
-    <li>Click on Yes, launch my study.</li>
+    <li>Click the green launch button in the top right corner of the screen.<br>
+      <br>
+    
+      <%= image_tag("help/launch.png", alt:'Launch') %><br>
+      <br>
+    </li>
+    <li>When a study launches, you will no longer be able to change the question, add new 
+    areas or add, remove, or modify images. Click on Yes, launch my study.<br>
+      <br>
+      <%= image_tag("help/launch-4.png", alt:'') %>    </li>
     </ol>
-    <p>Once a study has been launched, it is open for voting and you will no longer be able to change the question, add new 
-    areas or add, remove, or modify images.  It can be closed and it can be opened again, by clicking on the 
+    <p>Once a study has been launched, it is open for voting.  It can be closed and it can be opened again, by clicking on the 
     Close and Open buttons in the top right of the study view tab. </p>
     <a id="search"></a><h3>Search Existing Studies</h3>
-    <p>If you know the title or author of a study, you can search for it using the search box at the top of the Public Studies page.</p>
-    <p>To clear the search filter, just clear the text and click on Search again.</p>
+    <p>If you know the title or author of a study, you can search for it using the search box at the top of the Available Studies page.<br />To clear the search filter, just clear the text and click on Search again.</p>
+    <%= image_tag("help/search.png", alt:'') %>
+
 
     <h3 id="voting">Voting</h3>
     <p>To vote on a study:</p>
     <ol>
-    <li>Click on <%= link_to t('.public_studies'), studies_path %> and the name of the study you want to open. The study will open on the vote page.</li>
+    <li>Click on <a href="/studies"><span class="translation_missing" title="translation missing: en.static_pages.help.public_studies">Available Studies</span></a> and the name of the study you want to open. The study will open on the vote page.</li>
     <li>Click on the image which best answers the question, or you can click on the "Skip" link to skip an image pair.</li>
-    <li>Your vote will be recorded as soon as you click and cannot be changed once it is recorded.</li>
+    <li>Your vote will be recorded as soon as you click and cannot be changed once it is recorded.<br>
+      <br>
+      <%= image_tag("help/voting.png", alt:'') %>    </li>
     </ol>
     <p>There is also a study featured on the home page and voting works the same way.</p>
+
+
     <a id="analyze"></a><h3>Analyze Results</h3>
     <p>There are a variety of ways you can view study results, for your own studies and for those studies with results 
     made public by the authors.  To access the results:</p>
     <ol>
-    <li>Go to <%= link_to t('.public_studies'), studies_path %> or to My Research and click on the study you would 
+    <li>Go to <a href="/studies"><span class="translation_missing" title="translation missing: en.static_pages.help.public_studies">Available Studies</span></a> or to My Studies and click on the study you would 
     like to view.</li>
     <li>Click on the Analyze tab.</li>
     <li>There are four tabs of results*
     <ul><li><strong>Summary</strong> displays each location and how many times it was chosen and the number of times 
     it was offered as a choice.</li>
-    <li><strong>Areas</strong> displays each area and how many times an image from that area was chosen over an 
-    image from another area. (Note: this is only valid in studies with multiple areas.)</li>
-    <li><strong>Heatmap</strong> displays on a map the location of images frequently chosen.</li>
     <li><strong>Download</strong> allows the user to download csv and xls files with the study results.  The Location 
-    Summary contains slightly more information than the Summary tab (e.g. heading and pitch of images) while the 
-    Full Results include information about the geographic location of the voter and more details about the areas chosen 
-    and rejected.</li></ul></li></ol>
-    <p>*The Download tab is not available on most smartphones.</p>    
+      Summary contains slightly more information than the Summary tab (e.g. heading and pitch of images) while the 
+      Full Results include information about the geographic location of the voter and more details about the areas chosen 
+      and rejected.</li></ul></li><br><br>
+    <%= image_tag("help/analyze.png", alt:'') %>
+    </ol>
+    <p>*The Download tab is not available on most smartphones.</p>      
 
     <h3 id="limits">Limits</h3>
     <p>An individual user can only request <a href="https://developers.google.com/maps/documentation/streetview/#usage_limits">25,000 StreetView image requests</a> per 24 hours.  In the highly unlikely case that an individual voter exceeds this limit, the following image will 
