adds updated screencasts

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -18,8 +18,15 @@
     <h1>Help</h1>
 
     <h3 id="video">Video Introduction</h3>
-    <p>We are in the process of updating our screencasts. In the meantime, this <a href="http://www.youtube.com/watch?v=NH63AjR83rg">video provides a nice overview</a> though not everything is in exactly the same location.</p> 
-
+    <h4>Getting Started by Creating a Study</h4>
+    <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+    <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="100%"  src="//www.youtube.com/embed/2wEjUZ_ybpw" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <h4>Older Video</h4>
+    <p>We have changed a few things since it was produced, but this video provides a slightly more complete overview of how to use StreetSeen. In particular, it covers logging in and downloading data in addition to study creation.</p> 
+    <div style="position: relative; padding-bottom: 56.25%; padding-top: 30px; height: 0; overflow: hidden;">
+    <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" width="100%"  src="//www.youtube.com/embed/NH63AjR83rg" frameborder="0" allowfullscreen></iframe>
+    </div>
     <h3 id="accounts">Create a User Account</h3>
     <p>Go to the <a href="/users/sign_up">Sign Up</a> page.  User accounts can be created 
     using existing accounts on Coursera, Facebook or Twitter.   
