Added New Relic monitoring

--- a/config/deploy/application.yml.erb
+++ b/config/deploy/application.yml.erb
@@ -15,3 +15,5 @@ RECAPTCHA_PUBLIC: "<%= Capistrano::CLI.ui.ask("Enter the RECPATCHA public key: "
 RECAPTCHA_PRIVATE: "<%= Capistrano::CLI.password_prompt("Enter the RECAPTCHA private key: ") %>"
 
 GOOGLE_TRACKING_ID: "<%= Capistrano::CLI.ui.ask("Enter the Google Analytics Tracking ID: ") %>"
+
+NEWRELIC_KEY: "<%= Capistrano::CLI.ui.ask("Enter the New Relic license key: ") %>"
